[package]
name = "atmerge"
version = "0.1.3"
edition = "2021"


[features]
default = []

# Enable serialization of `Tree`.
#serde = ["dep:serde", "egui/serde"]

[dependencies]

egui = { version = "0.27", default-features = false }
#serde = { version = "1", optional = true, features = ["derive"] }
serde = "1.0.200"
egui_extras = {version = "0.27.0", default-features = true}

duplicate = "1.0"
paste = "1.0"

eframe = "0.27"
#eframe = { version = "0.27",  default-features = true, features = ["persistance"]}

egui_dock = {path = "../egui_dock"}

rfd = "0.14.1"

polars = {version = "0.32.1", features = ["lazy","csv","dtype-datetime","rows"]}
polars-core = "0.32.1"
polars-io = "0.32.1"



calamine = "0.24.0"

tokio = { version = "1.37.0", features = ["full"] }

notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"]}

# use directories to store app persistant data
directories = "5.0.1"
polars_excel_writer = "0.7.0"

self_update = "0.40.0"

semver = "1.0.22"

egui-modal = "0.3.6"


umya-spreadsheet = "1.2.3"

