[package]
name = "atmerge"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/babazaroni/atmerge"


[features]

#default = ["persistence"]

persistence = ["eframe/persistence", "egui/persistence", "serde"]
serde = ["dep:serde", "egui/serde"]

[dependencies]

eframe = { version = "0.27.0", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }


egui = { version = "0.27", default-features = false }

serde = { version = "1", optional = true, features = ["derive"] }
egui_extras = {version = "0.27.0", default-features = true}

duplicate = "1.0"
paste = "1.0"


egui_dock = {path = "../egui_dock"}
#egui_dock = "0.12.0"

rfd = "0.14.1"

polars = {version = "0.32.1", features = ["lazy","csv","dtype-datetime","rows"]}
polars-core = "0.32.1"
polars-io = "0.32.1"



calamine = "0.24.0"

tokio = { version = "1.37.0", features = ["full"] }

notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"]}

# use directories to store app persistant data
directories = "5.0.1"
polars_excel_writer = "0.7.0"

self_update = "0.40.0"

semver = "1.0.22"

egui-modal = "0.3.6"

umya-spreadsheet = "1.2.3"
win-beep = "1.0.3"

crashreport ="^1.0.1"



